Changes in MainActivity: 1)Add editText to give a title to the Roulette-Decision. 2) Handle full orientation changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="floatButton_ready_desc">Commit options</string>
     <string name="button_deleteOption_desc">Delete option</string>
     <string name="EMPTY_STRING">""</string>
+    <string name="editText_title_hint">Add a title</string>
 </resources>
