--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DecisionMaker</string>
+    <string name="app_name">Decision Maker</string>
     <string name="button_spin_text">Spin</string>
     <string name="menu_modify_text">Modify options</string>
     <string name="button_addOption">Add</string>
@@ -8,5 +8,5 @@
     <string name="floatButton_ready_desc">Commit options</string>
     <string name="button_deleteOption_desc">Delete option</string>
     <string name="EMPTY_STRING">""</string>
-    <string name="editText_title_hint">Add a title</string>
+    <string name="editText_title_hint">Roulette title</string>
 </resources>
