--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,19 @@
     <string name="title_activity_my_roulettes">My Roulettes</string>
     <string name="menutitle_showRoulettes">My Roulettes</string>
     <string name="menu_title_add">Add</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="general_header">General</string>
+    <string name="roulette_header">Roulette</string>
+
+    <!-- General Preferences -->
+    <string name="sound_title">Sound</string>
+    <string name="sound_summary">Allow tone while Roulette is spinning</string>
+    <string name="shake_title">Shake</string>
+    <string name="shake_summary">Allow Roulette to spin by shaking the device</string>
+
+    <!-- Roulette Preferences -->
+    <string name="color_title">Color scheme</string>
+
 </resources>
